<resources>
    <string name="app_name">Character Beyond Fantasy</string>
    <string name="btn_add_new_character">Add new character</string>
    <string name="btn_my_characters">My characters</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- CREATE CHARACTER -->
    <!-- Create stats -->

    <string name="btn_next">Next</string>
    <string name="btn_back">Back</string>
    <string name="stats_header">Set your attributes manually or...</string>
    <string name="btn_generate">Generate</string>
    <string name="agi">AGI</string>
    <string name="intel">INT</string>
    <string name="con">CON</string>
    <string name="dex">DEX</string>
    <string name="str">STR</string>
    <string name="per">PER</string>
    <string name="pow">POW</string>
    <string name="wp">WP</string>
    <string name="appearance">APPEARANCE</string>

    <!-- Create basics -->
    <string name="gender">Gender</string>
    <string name="basicsHead">Choose a name for your character</string>
    <string name="age">Age</string>
    <string name="eyes_color">Eyes color</string>
    <string name="hair_color">Hair color</string>
    <string name="skin">Skin</string>
    <string name="character_name">Character name</string>

    <!-- Create details -->
    <string name="choose_your_race">Choose your race</string>
    <string name="choose_your_class">Choose your class</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="edit_character_icon">Edit character</string>
</resources>
