<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".CreateCharacter.CreateStatsFragment">

    <Button
        android:id="@+id/btnNext2"
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/statsHead"
        style="@style/headers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/stats_header"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGenerate"
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_generate"
        app:layout_constraintEnd_toEndOf="@+id/statsHead"
        app:layout_constraintStart_toStartOf="@+id/statsHead"
        app:layout_constraintTop_toBottomOf="@+id/statsHead" />

    <TableLayout
        android:id="@+id/tabStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGenerate">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/agi"
                style="@style/mainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/agi"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/valAgi"
                style="@style/specialText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/text_area_bg"
                android:ems="2"
                android:inputType="number"
                android:padding="5dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/intel"
                style="@style/mainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/intel"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/valInt"
                style="@style/specialText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/text_area_bg"
                android:ems="2"
                android:inputType="number"
                android:padding="5dp"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/con"
                style="@style/mainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/con"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/valCon"
                style="@style/specialText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/text_area_bg"
                android:ems="2"
                android:inputType="number"
                android:padding="5dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/per"
                style="@style/mainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/per"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/valPer"
                style="@style/specialText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/text_area_bg"
                android:ems="2"
                android:inputType="number"
                android:padding="5dp"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/dex"
                style="@style/mainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/dex"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/valDex"
                style="@style/specialText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/text_area_bg"
                android:ems="2"
                android:inputType="number"
                android:padding="5dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/pow"
                style="@style/mainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/pow"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/valPow"
                style="@style/specialText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/text_area_bg"
                android:ems="2"
                android:inputType="number"
                android:padding="5dp"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            style="@style/specialText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/str"
                style="@style/mainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/str"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/valStr"
                style="@style/specialText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/text_area_bg"
                android:ems="2"
                android:inputType="number"
                android:padding="5dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/wp"
                style="@style/mainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/wp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/valWp"
                style="@style/specialText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/text_area_bg"
                android:ems="2"
                android:inputType="number"
                android:padding="5dp"
                android:textAlignment="center" />

        </TableRow>

    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabStats">

        <EditText
            android:id="@+id/valAp"
            style="@style/specialText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/text_area_bg"
            android:ems="2"
            android:inputType="number"
            android:padding="5dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/ap"
            app:layout_constraintStart_toEndOf="@+id/ap"
            app:layout_constraintTop_toTopOf="@+id/ap" />

        <TextView
            android:id="@+id/ap"
            style="@style/mainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/appearance"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>